# zero2prod

./: .dockerignore  .envrc  .gitignore  Cargo.toml  Dockerfile  configuration.yaml
.cargo/: config.toml
.github/workflows/: run_tests.yml
configuration/: base.yaml  production.yaml
migrations/: 20230415200344_create_subscriptions_table.sql  20230926152102_create_subscriptions_table.up.sql  20230926153249_make_status_not_null_in_subscriptions.up.sql  20230926153609_create_subscription_tokens_table.up.sql
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs
