[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
config = "0.13"
chrono = "0.4"
tracing = { version = "0.1", features = ["log"] }
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
once_cell = "1"
secrecy = { version = "0.8", features = ["serde"] }
opentelemetry = { version = "0.18", features = ["rt-tokio", "rt-tokio-current-thread"] }
opentelemetry-jaeger = { version = "0.17", features = ["rt-tokio", "rt-tokio-current-thread"] }
tracing-opentelemetry = "0.18"
tracing-actix-web = { version = "0.7", features = ["opentelemetry_0_18"] }

[dependencies.sqlx]
version = "0.6"
features = [
    "runtime-actix-native-tls",
    "postgres",
    "offline",
    "macros",
    "uuid",
    "chrono",
    "migrate"
]

[dependencies.uuid]
version = "1"
features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]